tests/reference/asr-arrays_05-ec8fbd5.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/arrays_05.py:6:5
  |
6 |     x: i16[5, 4] = empty([5, 3], dtype=int16)
  |     ^              ^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i16[5,4]' and 'i16[5,3]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
